--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <div class="script-display">
                 <code
-                    id="script-text">loadstring(game:HttpGet("https://api.luarmor.net/files/v3/loaders/f1ba123ea7b00f2a617c65beac3bb683.lua"))()</code>
+                    id="script-text">loadstring(game:HttpGet("https://valorsite.vercel.app/valor.lua"))()</code>
                 <button class="copy-btn" id="copy-script-btn" title="Copy Script">
                     <i class="fas fa-copy"></i>
                     <i class="fas fa-check"></i>
