--- a/discord/index.html
+++ b/discord/index.html
@@ -5,7 +5,7 @@
   <title>Redirecting...</title>
 </head>
 <body>
-  <p>Redirecting to <a href="https://discord.gg/yourserver">Discord</a>...</p>
+  <p>Redirecting to <a href="https://discord.gg/prmAJruScu">Discord</a>...</p>
   <script>
     window.location.href = "https://discord.gg/prmAJruScu";
   </script>
